[gd_scene load_steps=19 format=3 uid="uid://bc0tye6wbpkn4"]

[ext_resource type="Script" uid="uid://bt7g2gsm2uhxx" path="res://settings.gd" id="1_2fv1l"]
[ext_resource type="Texture2D" uid="uid://b5vx4hb1ubrvb" path="res://assets/settings/UI_Background.png" id="2_2fv1l"]
[ext_resource type="Texture2D" uid="uid://b4leenm4bjqi3" path="res://assets/settings/UI_notepad.png" id="3_37a8j"]
[ext_resource type="Texture2D" uid="uid://pief38k43epm" path="res://assets/settings/UI_notepad3.png" id="3_blqn1"]
[ext_resource type="Texture2D" uid="uid://dwnlg26c4adxc" path="res://assets/settings/UI_notepad2.png" id="3_mx4kw"]
[ext_resource type="Texture2D" uid="uid://dfm8papub33xs" path="res://assets/settings/UI_borderStickyNote3.png" id="4_8uskx"]
[ext_resource type="Texture2D" uid="uid://b1vlmj34e7s28" path="res://assets/settings/UI_Bullshit.png" id="4_37a8j"]
[ext_resource type="Texture2D" uid="uid://bbxroa0n0qkvi" path="res://assets/settings/UI_borderStickyNote2.png" id="6_xffxv"]
[ext_resource type="Texture2D" uid="uid://dxe5fan0biix8" path="res://assets/settings/UI_borderStickyNote.png" id="8_6ilhj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_37a8j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sfvul"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_blqn1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j7x76"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_71mvm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8uskx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xffxv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6ilhj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_10mky"]

[node name="Settings" type="CanvasLayer"]
process_mode = 3
scale = Vector2(0.28, 0.28)
transform = Transform2D(0.28, 0, 0, 0.28, 0, 0)
script = ExtResource("1_2fv1l")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 217.381
offset_top = 50.873
offset_right = 1278.38
offset_bottom = 733.873
grow_horizontal = 0
grow_vertical = 0

[node name="Screenshot2025-08-11210906" type="Sprite2D" parent="Control"]
position = Vector2(531.5, 349.5)
texture = ExtResource("2_2fv1l")

[node name="Credits" type="TextureButton" parent="Control"]
offset_left = 522.619
offset_top = 291.27
offset_right = 1246.62
offset_bottom = 980.27
texture_normal = ExtResource("3_blqn1")
texture_hover = ExtResource("4_8uskx")

[node name="ExitToStart" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 994.048
offset_top = 123.413
offset_right = 1592.05
offset_bottom = 717.413
texture_normal = ExtResource("3_mx4kw")
texture_hover = ExtResource("6_xffxv")

[node name="Exit" type="TextureButton" parent="Control"]
offset_left = 476.19
offset_top = -176.587
offset_right = 1074.19
offset_bottom = 417.413
texture_normal = ExtResource("3_37a8j")
texture_hover = ExtResource("8_6ilhj")

[node name="masterSlider" type="HSlider" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -834.5
offset_top = -280.5
offset_right = -163.5
offset_bottom = -142.5
grow_horizontal = 2
grow_vertical = 2
theme_override_icons/grabber = ExtResource("4_37a8j")
theme_override_icons/grabber_highlight = ExtResource("4_37a8j")
theme_override_icons/grabber_disabled = ExtResource("4_37a8j")
theme_override_icons/tick = ExtResource("4_37a8j")
theme_override_styles/slider = SubResource("StyleBoxEmpty_37a8j")
theme_override_styles/grabber_area = SubResource("StyleBoxEmpty_sfvul")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxEmpty_blqn1")
min_value = -30.0
max_value = 6.0
value = -12.0

[node name="soundfxSlider" type="HSlider" parent="Control"]
layout_mode = 0
offset_left = -304.0
offset_top = 609.127
offset_right = 366.0
offset_bottom = 747.127
theme_override_icons/grabber = ExtResource("4_37a8j")
theme_override_icons/grabber_highlight = ExtResource("4_37a8j")
theme_override_icons/grabber_disabled = ExtResource("4_37a8j")
theme_override_icons/tick = ExtResource("4_37a8j")
theme_override_styles/slider = SubResource("StyleBoxEmpty_j7x76")
theme_override_styles/grabber_area = SubResource("StyleBoxEmpty_71mvm")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxEmpty_8uskx")
min_value = -30.0
max_value = 6.0
value = -12.0

[node name="musicSlider" type="HSlider" parent="Control"]
offset_left = -304.0
offset_top = 351.984
offset_right = 368.0
offset_bottom = 489.984
theme_override_icons/grabber = ExtResource("4_37a8j")
theme_override_icons/grabber_highlight = ExtResource("4_37a8j")
theme_override_icons/grabber_disabled = ExtResource("4_37a8j")
theme_override_icons/tick = ExtResource("4_37a8j")
theme_override_styles/slider = SubResource("StyleBoxEmpty_xffxv")
theme_override_styles/grabber_area = SubResource("StyleBoxEmpty_6ilhj")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxEmpty_10mky")
min_value = -30.0
max_value = 6.0
value = -12.0

[connection signal="pressed" from="Control/Exit" to="." method="_on_exit_pressed"]
[connection signal="value_changed" from="Control/masterSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="value_changed" from="Control/soundfxSlider" to="." method="_on_soundfx_slider_value_changed"]
[connection signal="value_changed" from="Control/musicSlider" to="." method="_on_music_slider_value_changed"]
